@@ -1182,7 +1182,7 @@ EXPORT bool jackctl_server_unload_internal(
     }
 }
 
-EXPORT bool jackctl_server_load_slave(jackctl_server * server_ptr, jackctl_driver * driver_ptr)
+EXPORT bool jackctl_server_add_slave(jackctl_server * server_ptr, jackctl_driver * driver_ptr)
 {
     if (server_ptr->engine != NULL) {
         driver_ptr->info = server_ptr->engine->AddSlave(driver_ptr->desc_ptr, driver_ptr->set_parameters);
@@ -1192,7 +1192,7 @@ EXPORT bool jackctl_server_load_slave(jackctl_server * server_ptr, jackctl_drive
     }
 }
 
-EXPORT bool jackctl_server_unload_slave(jackctl_server * server_ptr, jackctl_driver * driver_ptr)
+EXPORT bool jackctl_server_remove_slave(jackctl_server * server_ptr, jackctl_driver * driver_ptr)
 {
     if (server_ptr->engine != NULL) {
         server_ptr->engine->RemoveSlave(driver_ptr->info);
@@ -1202,3 +1202,14 @@ EXPORT bool jackctl_server_unload_slave(jackctl_server * server_ptr, jackctl_dri
     }
 }
 
+EXPORT bool jackctl_server_load_master(jackctl_server * server_ptr, jackctl_driver * driver_ptr)
+{
+    // TODO
+    return false;
+}
+
+EXPORT bool jackctl_server_unload_master(jackctl_server * server_ptr, jackctl_driver * driver_ptr)
+{
+    // TODO
+    return false;
+}
